--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ header h1 .seo {
     color: #d9dcd6;
 }
 
-header nav {
+header div {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,10 +32,11 @@ header nav {
     font-size: 20px;
 }
 
-header nav ul {
+header div ul {
     list-style-type: none;
 }
-header nav ul li {
+
+header div ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -57,8 +58,7 @@ p {
     background-size: cover;
     background-position: center;
 }
-/*
-*/
+
 .float-left {
     float: left;
     margin-right: 25px;
@@ -86,55 +86,28 @@ main {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+/*condensed and deleted unneeded styles*/
+.benefit {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
+/*condensed and deleted unneeded styles*/
+.benefit h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
 
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+/*condensed all to 'benefit'*/
+.benefit img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
 
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.main-section {
+.main {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -144,18 +117,16 @@ main {
 }
 
 
-
-.main-section img {
+.main img {
     max-height: 200px;
 }
 
 
 
-.main-section h2 {
+.main h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
 
 .footer {
     padding: 30px;
